# antid

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml
docs/: cli.md  getting-started.md  index.md  installation.md
docs/reference/: index.md  io.md  numbering.md  ppi.md
src/antid/: __init__.py  cli.py  numbering.py
src/antid/io/: __init__.py  seq.py  struct.py
src/antid/numbering/: __init__.py  antibody.py  scfv.py
src/antid/ppi/: __init__.py  liability.py  scan.py
src/antid/preprocess/: __init__.py  struct.py  visualize.py
src/antid/utils/: __init__.py  constant.py  patch_antpack.py  seq.py
tests/: test_numbering.py  test_ppi.py  test_utils.py
tests/data/: 1MFV.fasta  rcsb_pdb_5B8C.fasta
tests/io/: test_seq_io.py  test_struct_io.py
tests/preprocess/: test_preprocess_struct.py
