[project]
name = "antid"
version = "0.1.0"
description = "Helper functions for antibody design."
readme = "README.md"
authors = [{ name = "Yi Zhou", email = "me@y1zhou.com" }]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "gemmi>=0.7.1",
    "gemmi-program>=0.7.1",
    "polars[calamine,numpy,pandas]>=1.31.0",
]

[project.scripts]
antid = "antid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
