[project]
name = "antid"
version = "0.1.0"
description = "Helper functions for antibody design."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Yi Zhou", email = "me@y1zhou.com" }]
keywords = [
    "antibody",
    "design",
    "bioinformatics",
    "protein",
    "structure",
    "sequence",
]

dependencies = [
    # antpack>0.3.9 is non-commercial only
    "antpack==0.3.8.5",
    "biopython>=1.85",
    "gemmi>=0.7.1,<0.8.0",
    "gemmi-program>=0.7.1,<0.8.0",
    "loguru>=0.7.3",
    "polars[calamine,numpy,pandas]>=1.31.0,<2.0.0",
    "requests>=2.32.4,<3.0.0",
]

[project.scripts]
antid = "antid:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipython>=9.4.0", "pytest>=8.4.1", "pytest-cov>=6.2.1"]
all = [{ include-group = "dev" }]

[tool.pytest.ini_options]
addopts = "--cov=src/antid"

[tool.coverage.run]
omit = ["tests/*"]
