[project]
name = "antid"
version = "0.1.0"
description = "Helper functions for antibody design."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Yi Zhou", email = "me@y1zhou.com" }]
keywords = [
  "antibody",
  "design",
  "bioinformatics",
  "protein",
  "structure",
  "sequence",
]

dependencies = [
  # antpack>0.3.9 is non-commercial only
  "antpack>=0.3.8.5,<0.3.9",
  "biopython>=1.85",
  "gemmi>=0.7.1,<0.8.0",
  "gemmi-program>=0.7.1,<0.8.0",
  "loguru>=0.7.3",
  "pdbfixer>=1.11,<2",
  "polars[calamine,numpy,pandas]>=1.31.0,<2.0.0",
  "requests>=2.32.4,<3.0.0",
  "tqdm>=4.67.1,<5.0.0",
  "typer>=0.19.2,<0.20.0",
]

[tool.uv.sources]
pdbfixer = { git = "https://github.com/openmm/pdbfixer" }

[project.scripts]
antid = "antid.cli:app"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipykernel"]
test = ["pytest>=8.4.1", "pytest-cov>=6.2.1", "pytest-xdist>=3.8.0"]
all = [{ include-group = "dev" }, { include-group = "test" }]

[tool.pytest.ini_options]
addopts = "--cov=src/antid --cov-branch -n auto"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]


[tool.coverage.run]
omit = ["tests/*", "src/antid/utils/constant.py"]
